[#150625243] Fix product card margins and alignment

--- a/app/assets/stylesheets/sephora_style_guide/partials/_product-card.scss
+++ b/app/assets/stylesheets/sephora_style_guide/partials/_product-card.scss
@@ -32,7 +32,7 @@
   .out-of-stock {
     @include font-avalon-demi;
     position: absolute;
-    top: 26%;
+    top: 25%;
     width: 100%;
     height: 45px;
     padding-top: 17px;
@@ -43,12 +43,8 @@
     font-size: 16px;
     pointer-events: none;
 
-    @include media-breakpoint-down(lg) {
-      top: 25%;
-    }
-
     @include media-breakpoint-down(md) {
-      top: 22%;
+      top: 27%;
       padding-top: 9px;
       height: 30px;
       font-size: 14px;
@@ -238,7 +234,7 @@
       }
 
       .product-card-rating {
-        margin-bottom: 5px;
+        margin-bottom: 2px;
 
         .product-rating {
           position: relative;
@@ -262,7 +258,7 @@
       .product-card-mobile-variant-indicator {
         display: none;
 
-        @include media-breakpoint-down(md) {
+        @include media-breakpoint-down(lg) {
           display: block;
         }
 
